# Fatima-Fellowship-2026

./: LICENSE  README.md  create_hf_dataset.py  download_samples.py  generate_submission.py  mmstar_stats.json  order_sensitivity_stats.json  pacbench_stats.json  plan.md  pyproject.toml  run_eval.py  run_experiments.py  run_mmstar.py  run_order_sensitivity.py  run_pacbench.py  run_sphere.py  run_vlmsareblind.py  sphere_stats.json  visualize_mmstar.py  visualize_order_sensitivity.py  visualize_pacbench.py  visualize_sphere.py  visualize_vlmsareblind.py  vlmsareblind_stats.json
